data/derived/comb/progs/unify/prog3113.ml.out
Characters 28-52:
  wwhile (fun x -> (f x = b,b),b);;
         ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
